package main.java.exception;

/**
 * ����һ��������ص��쳣
 * @author rongdi
 *
 */
@SuppressWarnings("serial")
public class PropertyException extends RuntimeException {

	public PropertyException(String s) {
		super(s);
	}
}
