package main.java.xml.autowire;
/**
 * @author rongdi
 */
public interface Autowire {
	/**
	 * @return
	 */
	public String getType();
}
